--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Siddharth Reddy
-description:
+description: This website is under development
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
