--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Siddharth Reddy
-description: This website is under development
+description: This website is currently under development
 google_analytics:
 theme: jekyll-theme-cayman
