--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Siddharth Reddy 
-description: This website is currently under development
+description: ¯\_(ツ)_/¯
 theme: jekyll-theme-cayman
